# rust-server-poc

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-01-15-024000_create_users/: up.sql
src/: handlers.rs  main.rs  password_manager.rs  requests.rs
src/models/: db_models.rs  mod.rs  requests.rs
