[package]
name = "rust-server-poc"
version = "0.1.0"
authors = ["conectado <conectado2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
base64 = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.14"
listenfd = "0.3"
r2d2 = "0.8"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7"
